# ChangeLog for app-editors/hteditor
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.31 2007/04/22 11:53:20 corsair Exp $

*hteditor-2.0.5 (22 Apr 2007)

  22 Apr 2007; Markus Rothe <corsair@gentoo.org> +hteditor-2.0.5.ebuild:
  version bump to 2.0.5 which fixes PowerPC64 handling; added ~ppc64; bug #175272

*hteditor-2.0.4 (21 Apr 2007)

  21 Apr 2007; Daniel Black <dragonheart@gentoo.org> hteditor-2.0.ebuild,
  hteditor-2.0.3.ebuild, +hteditor-2.0.4.ebuild:
  version bump. Thanks to author Sebastian. Remove unused inherit lines from
  previous versions

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> hteditor-2.0.ebuild:
  x86 stable wrt bug 175272

  20 Apr 2007; Christian Faulhammer <opfer@gentoo.org> hteditor-2.0.ebuild:
  stable amd64, bug  175272

*hteditor-2.0.3 (19 Apr 2007)

  19 Apr 2007; Daniel Black <dragonheart@gentoo.org>
  -files/hteditor-0.9.4-asneeded.patch,
  -files/hteditor-2.0_beta2-optionallzo.patch,
  -files/hteditor-2.0_beta2-regexneedstdlib.patch, -hteditor-0.9.1.ebuild,
  -hteditor-0.9.4.ebuild, -hteditor-2.0_beta2.ebuild,
  +hteditor-2.0.3.ebuild:
  version bump thanks to Sebastian Biallas in bug #169829

*hteditor-2.0 (08 Mar 2007)

  08 Mar 2007; Daniel Black <dragonheart@gentoo.org> +hteditor-2.0.ebuild:
  version bump as per bug #169829 thanks to Sebastian Biallas

*hteditor-2.0_beta2 (27 Jan 2007)

  27 Jan 2007; Daniel Black <dragonheart@gentoo.org>
  +files/hteditor-2.0_beta2-optionallzo.patch,
  +files/hteditor-2.0_beta2-regexneedstdlib.patch,
  +hteditor-2.0_beta2.ebuild:
  version bump. adds x86_64 arm and powerpc_64 disassembly. Also compiles on
  gcc-4. bug #155313 thanks to katerina

*hteditor-0.9.4 (29 Oct 2006)

  29 Oct 2006; Daniel Black <dragonheart@gentoo.org>
  +files/hteditor-0.9.4-asneeded.patch, +hteditor-0.9.4.ebuild:
  version bump with fix for ldflags as-needed - bug #148040. thanks to
  Krzysztof Mi&#261;sko
