@@ -1,32 +1,6 @@
-DIST ht-2.0.3.tar.bz2 855191 RMD160 672fb8dad95a4cc17a35f6aac1d767d8fe2f3ca8 SHA1 a3d7e6ec00ded45bd0feaea7689c32b855c59b08 SHA256 485d9b6a3c442811c0c464ee143d4a04b5b1118d99935bf3a56a5086bc2cf2c1
 DIST ht-2.0.5.tar.bz2 855130 RMD160 4e45740d2d978200784505da8d3794c46be6712b SHA1 ab07acf802fa8fa1646a20ba4d886d34f6c8daa9 SHA256 d6bf6068ebd26b847f8fe3b6d0ad18af77972a9f308fc0c8fe1b1178ed5b8acb
 DIST ht-2.0.tar.bz2 854003 RMD160 06f61f6b09a31d04830c57c347a21160ac2e60ee SHA1 f8523815854b1ccc2a364babd0521533f6c5a194 SHA256 1d0025030fb9bb22b8b14043611fff5003e8cbc3a9689977b79c14eba0c6829f
-EBUILD hteditor-2.0.3.ebuild 909 RMD160 0410b3a532b3c4f47f8ca455bbe073efa8ff8ced SHA1 9504a5d1b65080cbf75edc1426fab398f8685c6b SHA256 18538a5853cd4acf93b16d574f077c7a4cb960c06ac4ce1d9fce5ab07449cc2d
-MD5 5bb267f0632712a8017e761377d7f3ca hteditor-2.0.3.ebuild 909
-RMD160 0410b3a532b3c4f47f8ca455bbe073efa8ff8ced hteditor-2.0.3.ebuild 909
-SHA256 18538a5853cd4acf93b16d574f077c7a4cb960c06ac4ce1d9fce5ab07449cc2d hteditor-2.0.3.ebuild 909
 EBUILD hteditor-2.0.5.ebuild 905 RMD160 abb139ee37636bb8b8a0540d48c384ebb955a5f9 SHA1 803c00b32994fa39e3728939ad6dab6359e0b732 SHA256 fdbcc63b191dd9b11a0898b6eb2236da49b07459191dd6d6e214cc44b950387e
-MD5 53cee66202ce4045cef3652e82ba67e5 hteditor-2.0.5.ebuild 905
-RMD160 abb139ee37636bb8b8a0540d48c384ebb955a5f9 hteditor-2.0.5.ebuild 905
-SHA256 fdbcc63b191dd9b11a0898b6eb2236da49b07459191dd6d6e214cc44b950387e hteditor-2.0.5.ebuild 905
-EBUILD hteditor-2.0.ebuild 894 RMD160 ab7a34b09a6cf7e86cd1822328b3406c7ae9bc38 SHA1 d6e5ce6c36c29789d304c244407155df14c59f83 SHA256 5c5b9b6f3d259fd434e149e01704c8395ee9b08c4bc3f3e5f3486620721c61ca
-MD5 1d008f887a3ca115c0358f5766997f02 hteditor-2.0.ebuild 894
-RMD160 ab7a34b09a6cf7e86cd1822328b3406c7ae9bc38 hteditor-2.0.ebuild 894
-SHA256 5c5b9b6f3d259fd434e149e01704c8395ee9b08c4bc3f3e5f3486620721c61ca hteditor-2.0.ebuild 894
-MISC ChangeLog 5422 RMD160 ef3cfcb3caf3e5ed9ee5e753cd25c6e9eec6455d SHA1 665d46e0ca63947ae3d8f24bfa38b1147e26c071 SHA256 16a64e304297146538ff14e4928ce4d8cc5e6ff1e0a33104336bae0d77cbacec
-MD5 82c2c04f45a5320aff11c91d304e1a88 ChangeLog 5422
-RMD160 ef3cfcb3caf3e5ed9ee5e753cd25c6e9eec6455d ChangeLog 5422
-SHA256 16a64e304297146538ff14e4928ce4d8cc5e6ff1e0a33104336bae0d77cbacec ChangeLog 5422
+EBUILD hteditor-2.0.ebuild 893 RMD160 1d3ae7511918b39fc1a2f7588d6a6eabf8fa5db2 SHA1 99c2323ec3d17aad788a3b8a96f7755190123326 SHA256 fef1093a94b1a567bef82b43972a34218ed18cdbdfc56b69eeb989fc6fa9341c
+MISC ChangeLog 5700 RMD160 e5062501551717e5efc347c8a592caf3e49d94ee SHA1 cb435bce0fe5163d734f57688c6f97006ffca8e8 SHA256 bc6e086b94c90b304941ded48edc0ded6e5580c91d3a81b5331b222d947b8d0f
 MISC metadata.xml 230 RMD160 df46c6fe6aecbf764587ac6f76f0bbb5ba9a62d7 SHA1 410310eb018b0f84121dab6c9520675be6985a5d SHA256 ce5541de8411e3693cbcbe7a9a68cf451206ab15240cedcbd49f6f67c24ef88b
-MD5 5e83aa40741c7ae458653fb9ed8b7805 metadata.xml 230
-RMD160 df46c6fe6aecbf764587ac6f76f0bbb5ba9a62d7 metadata.xml 230
-SHA256 ce5541de8411e3693cbcbe7a9a68cf451206ab15240cedcbd49f6f67c24ef88b metadata.xml 230
-MD5 16bf92c11487c297e8f60a924183c506 files/digest-hteditor-2.0 223
-RMD160 f1d7303af85c4e55a5d61a4a497475207411fd7e files/digest-hteditor-2.0 223
-SHA256 08a041cf83dd95437c9978b47676033e344fe4e53c844e4bd19936e0bf58a564 files/digest-hteditor-2.0 223
-MD5 12fe6d9f5281c9347e5bbe44e342ceb8 files/digest-hteditor-2.0.3 229
-RMD160 1676abb5e44761aa3cb9a22d9bfabda3535c4823 files/digest-hteditor-2.0.3 229
-SHA256 9b949ffb4abe9ce15b86c8d4e724656c4da79a7a613d3b3fd73f278552bec9d0 files/digest-hteditor-2.0.3 229
-MD5 ef0463bcdf3693d694b700e49a4fb674 files/digest-hteditor-2.0.5 229
-RMD160 b8c55557793b449a6f06bf63255ff0b3078f84a2 files/digest-hteditor-2.0.5 229
-SHA256 6369307e6d0c06ba6dae11fe9c0493ed4814eb2bd68707fe86362ec914c41f8a files/digest-hteditor-2.0.5 229
