@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/hteditor/hteditor-2.0.ebuild,v 1.4 2007/04/21 22:24:03 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/hteditor/hteditor-2.0.ebuild,v 1.5 2007/05/05 14:59:10 dertobi123 Exp $
 
 EAPI="prefix"
 
