@@ -1,6 +1,14 @@
 # ChangeLog for app-editors/hteditor
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.31 2007/04/22 11:53:20 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.33 2007/05/06 21:19:27 dragonheart Exp $
+
+  06 May 2007; Daniel Black <dragonheart@gentoo.org>
+  -files/hteditor-gcc41.patch, -hteditor-0.9.0.ebuild,
+  -hteditor-2.0.3.ebuild, -hteditor-2.0.4.ebuild:
+  older versions punted
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> hteditor-2.0.ebuild:
+  ppc stable
 
 *hteditor-2.0.5 (22 Apr 2007)
 
